Adapt findFlexBasis function to determine box height and width instead. This solved the issue of boxes overflowing the container at higher pixel settings.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0px;
@@ -27,11 +29,12 @@ button {
 
 #container {
     display: flex;
-    flex: none;
     flex-wrap: wrap;
-    height: 1800px;
-    width: 1800px;
-    margin-top: 40px;
-    border-color: #1F2937;
-    border: 1px solid;
+    height: 800px;
+    width: 800px;
+    margin-top: 50px;
+}
+
+box {
+    outline: .1px solid rgba(125, 125, 125, 0.25);
 }
